2011-12-14  Kai Tietz  <ktietz@redhat.com>

	* stdio.h, wchar.h:  Reorganize crt-overrides ... part 1

2011-12-13  Jonathan Lui  <user net147 at sourceforge>

	* sys/timeb.h (_ftime): Fix default definition for 32-bit vs.
	64-bit Windows.
	(_timeb): Likewise.

2011-11-18  Jonathan Yong  <jon_y@users.sourceforge.net>

	* time.h: Make sure to use 32bit time when _USE_32BIT_TIME_T in use.
	* sys/stat.h: Likewise for _stat32i64 and _fstat32i64 structures.

2011-11-14  Ozkan Sezer  <sezeroz@gmail.com>

	* unistd.h: Define SEEK_SET, SEEK_CUR, SEEK_END, STDIN_FILENO,
	STDOUT_FILENO and STDERR_FILENO, if not already defined. Patch
	from 'antran'. Closes bug #3426006.

2011-11-13  Kai Tietz  <ktietz@redhat.com>

	* stdio.h, wchar.h:  Replace __forceinline by
	'static __attribute__((__unused__))' for functions using
	variable arguments.

2011-11-05  Kai Tietz  <ktietz@redhat.com>

	* _mingw.h.in: Replace always_inline attribute name
	by __always_inline__.

2011-11-04  Rafal Carr  <funman@videolan.org>
	    Kai Tietz  <ktietz@redhat.com>

	* _mingw_print_push.h: Remove wscanf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-wscanf override via alias.
	* wchar.h: Likewise.

	* _mingw_print_push.h: Remove scanf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-scanf override via alias.

	* _mingw_print_push.h: Remove wprintf-defines.
	* _mingw_print_pop.h: Likewise.
	* stdio.h: Replace macro-wprintf override via alias.
	* wchar.h: Likewise.

2011-11-01  Ozkan Sezer  <sezeroz@gmail.com>

	* stdio.h: Remove unintended extra "__" and "$$" characters from
	previous commits. Fix typo (s/__CRT__INLINE/__CRT_INLINE).
	(__mingw_asprintf): Mark the first and second args as __restrict.
	Mark the function as __nothrow. Replace __attribute__((nonnull()))
	by __MINGW_ATTRIB_NONNULL for consistency.
	(__mingw_vasprintf): Likewise.

2011-11-01  Kai Tietz  <ktietz@redhat.com>

	* stdio.h: Fix broken handling for snprintf/vsnprintf
	due recent patch.
