@@ -1,5 +1,8 @@
 2011-12-14  Kai Tietz  <ktietz@redhat.com>
 
+	* _mingw.h.in (__USE_MINGW_ANSI_STDIO): Extend default definition
+	to make it more compatible to mingw.org.
+
 	* stdio.h, wchar.h:  Reorganize crt-overrides ... part 1
 
 2011-12-13  Jonathan Lui  <user net147 at sourceforge>
